# Qwen-ASR

./: .env.example  .gitignore  CLAUDE.md  GUIDELINE.md  Makefile  README.md  finetune_vivos.md  pyproject.toml
configs/: base.yaml  finetune_vivos.yaml  phase1_large_sft.yaml  phase2_domain_adapt.yaml  phase3_competition.yaml
scripts/: download_datasets.py  evaluate.py  inference.py  merge_lora.py  prepare_data.py  setup_cloud.sh  train.py
src/: config.py
src/data/: __init__.py  collator.py  datasets.py  utils.py
src/data/processors/: __init__.py  base.py  fleurs.py  fosd.py  gigaspeech2.py  phoaudiobook.py  vietbud500.py  vietsuperspeech.py  vivoice.py  vivos.py  vlsp.py
src/evaluation/: __init__.py  benchmarks.py  metrics.py  normalize_vi.py
src/model/: __init__.py  freezing.py  loader.py  lora.py
src/training/: __init__.py  callbacks.py  trainer.py
src/training/deepspeed_configs/: zero2.json
src/utils/: logging.py
tests/: test_collator.py  test_config.py  test_normalize_vi.py
