[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-asr-vi"
version = "0.1.0"
description = "Vietnamese ASR finetuning for Qwen3-ASR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qwen-asr>=0.0.6",
    "torch>=2.5,<2.6",  # pinned to 2.5.x to match prebuilt flash-attn wheel ABI
    "transformers>=4.57",
    "peft>=0.15",
    "accelerate>=1.0",
    "datasets>=3.0",
    "huggingface-hub>=0.20",
    "wandb",
    "jiwer",
    "librosa",
    "soundfile",
    "pyyaml",
    "setuptools>=82.0.0",
]

[project.optional-dependencies]
train = [
    "deepspeed>=0.14",
    "flash-attn>=2.5",
]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Use prebuilt flash-attn wheel to avoid 30-60min CUDA compilation on rented GPUs.
# Wheel from: https://github.com/mjun0812/flash-attention-prebuild-wheels
# Matches: CUDA 12.4 + PyTorch 2.5 + Python 3.11 + Linux x86_64 (RunPod default)
# IMPORTANT: torch version in dependencies MUST match the wheel's torch version (ABI coupling).
#   e.g. torch2.5 wheel requires torch>=2.5,<2.6. Mismatch causes "undefined symbol" at import.
# To change for a different env, find your wheel at: https://mjunya.com/flash-attention-prebuild-wheels/
[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3+cu124torch2.5-cp311-cp311-linux_x86_64.whl" }
